--- a/architecture/index.html
+++ b/architecture/index.html
@@ -226,7 +226,7 @@
       </div>      
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementCard float cardBorder">
+          <div class=" float cardBorder">
             <img src="./ar_06.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Form finding exercise </h5>
@@ -410,7 +410,9 @@
   <div class="blankHM"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
-      <h4 data-aos="fade-up">Thank You for Visiting! please &nbsp; <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me about professional projects.</h4>
+      <h4 data-aos="fade-up">Thank You for Visiting! please <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me about professional projects.</h4>
+      <div class="blankHXS"></div>
+
       <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
     </div>
   </div>
