--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1168,6 +1168,8 @@
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
       <h5 class="element ">For more information please visit my website&#33;</h5>
+      <div class="blankHXS"></div>
+
       <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
     </div>
   </div>
