--- a/index.html
+++ b/index.html
@@ -376,6 +376,8 @@
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
       <h4 data-aos="fade-up">Thank You for Visiting&#33; Check back soon for more updates and stay tuned&#33;</h4>
+      <div class="blankHXS"></div>
+
       <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
     </div>
   </div>
