--- a/photography/index.html
+++ b/photography/index.html
@@ -651,6 +651,8 @@
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
       <h4 data-aos="fade-up">Thanks for stopping by&#33; I'll be sharing more photos soon&#33;</h4>
+      <div class="blankHXS"></div>
+
       <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
     </div>
   </div>
