--- a/about/index.html
+++ b/about/index.html
@@ -560,6 +560,8 @@
     <img src="../image/me.jpg" alt="right">
     <div class="centeredTQ">
       <h3 data-aos="fade-up" class="colorAPPOINTABg">Thank You for Visiting&#33; To learn more, head over to my website&#33;</h3>
+      <div class="blankHXS"></div>
+
       <h4 class="displayNonePhone  centerHorz" data-aos="fade-up">
         &nbsp; <a class="textProject" href="/">VICKYWANG.ME</a> </h4>
     </div>
