--- a/about/index.html
+++ b/about/index.html
@@ -334,7 +334,9 @@
   <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
       <div class="element">
-        <div class="progressStepContainer ">
+        <div class="element">
+
+        <div class="progressStepContainer">
           <ul class="progress">
             <li class="progress__item ">
               <h3> <strong class="colorGrey">Art </strong> </h3>
@@ -394,9 +396,8 @@
               </strong>
             </li>
           </ul>
-
         </div>
-      </div>
+      </div></div>
     </div>
 
   </div>
