--- a/about/index.html
+++ b/about/index.html
@@ -455,7 +455,7 @@
         <div class="element ">
           <h4> <strong>Google UX Design Professional Certificate </strong> </h4>
           <h6 class="textItalic"> August 2021 - October 2021</h6>
-          <h5>Google &#124; coursera</h5>
+          <h5>Google &#124; Coursera</h5>
           <h5> UI &#47; UX Design </h5>
         </div>
       </div>
