--- a/design_system/index.html
+++ b/design_system/index.html
@@ -170,7 +170,7 @@
   </nav>
   <!-- header -->
 
-  <!-- Working process -->
+  <!-- header image -->
   <div class="colorBgGrey">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
@@ -205,7 +205,58 @@
     </div>
   </div>
   <div class="blankHM"></div>
+    <!-- Title -->
+    <div class="wrapper">
+      <div class="Grid Grid--gutters Grid--center u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
 
+
+            <h3 class="Grid Grid--center colorBlack"> Please adjust your browser window to view the responsive layout.</h3>
+
+            <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Title -->
+  <div class="Grid Grid--gutters Grid--cols-3 wrapper">
+
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="">
+          <h3><strong>Role</strong></h3>
+          <h4>Individual work</h4>
+          <h4>Design &#38; maintain</h4>
+        </div>
+      </div>
+    </div>
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="">
+          <h3><strong>Skills</strong></h3>
+          <h4>Responsive layout</h4>
+
+          <h4>Design System</h4>
+          <h4>HTML&#47;CSS&#47;JavaScript</h4>
+        </div>
+      </div>
+    </div>
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="">
+          <h3><strong>Tool</strong></h3>
+          <h4>Figma</h4>
+          <h4>Photoshop</h4>
+          <h4>VS Code</h4>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="blankHM"></div>
   <div class="wrapper">
     <div class="element">
       <p class="tArrow">Devices<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
