--- a/index.html
+++ b/index.html
@@ -258,10 +258,9 @@
               <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
               <div class="img__description">
                 <div class="input-field">
-                  <input type="password" id="password" placeholder="password">
+                  <input type="password" id="password" placeholder="Password">
                   <button class="passwordArr" type="submit"><i class="fas fa-chevron-right"></i>
                   </button>
-                  <div class="blankHXS"></div>
                   <div class="pwIncorrectHeight">
                     <span id="pwIncorrect">Password is incorrect </span>
                   </div>
