--- a/design_system/index.html
+++ b/design_system/index.html
@@ -799,18 +799,18 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorAlet shadowBox">HEX 161616</div>
+          <div class="blockS colorAlet shadowBox">HEX CC3300</div>
         </div>
       </div>
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLess displayNone">HEX 161616</div>
+          <div class="blockS blackLess displayNone"></div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLess displayNone">HEX 161616</div>
+          <div class="blockS blackLess displayNone"></div>
         </div>
       </div>
     </div>
