--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html>
+<!DOCTYPE html>
 
+<html>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
