--- a/about/index.html
+++ b/about/index.html
@@ -319,7 +319,7 @@
     </div>
   </div>
   <div class="blankHM"></div>
- 
+
   <!-- My Journey -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -338,68 +338,69 @@
       <div class="element">
         <div class="element">
 
-        <div class="progressStepContainer">
-          <ul class="progress">
-            <li class="progress__item ">
-              <h3> <strong class="colorGrey">Art </strong> </h3>
-
-              <ul>
-                <li> developed the nature of artistic experience, allows me to express our emotions
-                  and feelings in a creative way.</li>
-                <li>It also inspired me to communicate messages or ideas, and to create a visual
-                  representation of something that we find difficult to put into words.</li>
-                <li>
-                  It helps me to develop a better understanding of the design process and to see
-                  things from a different perspective.</li>
-                <li>It provides me with a foundation form to create beautiful and unique designs by
-                  using color, composition, etc.</li>
-              </ul>
-            </li>
-            <div class="blankHXS"></div>
-
-            <li class="progress__item">
-              <h3> <strong class="colorGrey">Design </strong> </h3>
-
-              <ul>
-                <li>having a strong creative vision</li>
-                <li>creativity, innovation, attention to detail, and the ability to think outside
-                  the box.</li>
-              </ul>
-            </li>
-            <div class="blankHXS"></div>
-
-            <li class="progress__item">
-              <h3> <strong class="colorGrey">Architecture </strong> </h3>
-
-              <ul>
-
-                <li>design buildings that are both functional and aesthetically pleasing</li>
-                <li>take into account the needs of the people who will be using the building </li>
-                <li> the specific components and how they interact, and the overall aesthetic. </li>
-                <li>being able to effectively communicate with clients and team members</li>
-                <li>being organized and efficient </li>
-              </ul>
-            </li>
-            <div class="blankHXS"></div>
-
-            <li class="progress__item progress__item--active">
-              <strong>
-                <h3> <strong>User experience design </strong> </h3>
+          <div class="progressStepContainer">
+            <ul class="progress">
+              <li class="progress__item ">
+                <h3> <strong class="colorGrey">Art </strong> </h3>
 
                 <ul>
-                  <li>understanding the user, understand what they want and how they want to use the
-                    product</li>
-                  <li>design a product that is easy to use and meets their needs </li>
-                  <li>user-friendly and aesthetically pleasing</li>
-                  <li>understanding of human psychology and how people interact with technology</li>
-
-                  <li>having a good understanding of the latest trends and technologies </li>
+                  <li> developed the nature of artistic experience, allows me to express our emotions
+                    and feelings in a creative way.</li>
+                  <li>It also inspired me to communicate messages or ideas, and to create a visual
+                    representation of something that we find difficult to put into words.</li>
+                  <li>
+                    It helps me to develop a better understanding of the design process and to see
+                    things from a different perspective.</li>
+                  <li>It provides me with a foundation form to create beautiful and unique designs by
+                    using color, composition, etc.</li>
                 </ul>
-              </strong>
-            </li>
-          </ul>
+              </li>
+              <div class="blankHXS"></div>
+
+              <li class="progress__item">
+                <h3> <strong class="colorGrey">Design </strong> </h3>
+
+                <ul>
+                  <li>having a strong creative vision</li>
+                  <li>creativity, innovation, attention to detail, and the ability to think outside
+                    the box.</li>
+                </ul>
+              </li>
+              <div class="blankHXS"></div>
+
+              <li class="progress__item">
+                <h3> <strong class="colorGrey">Architecture </strong> </h3>
+
+                <ul>
+
+                  <li>design buildings that are both functional and aesthetically pleasing</li>
+                  <li>take into account the needs of the people who will be using the building </li>
+                  <li> the specific components and how they interact, and the overall aesthetic. </li>
+                  <li>being able to effectively communicate with clients and team members</li>
+                  <li>being organized and efficient </li>
+                </ul>
+              </li>
+              <div class="blankHXS"></div>
+
+              <li class="progress__item progress__item--active">
+                <strong>
+                  <h3> <strong>User experience design </strong> </h3>
+
+                  <ul>
+                    <li>understanding the user, understand what they want and how they want to use the
+                      product</li>
+                    <li>design a product that is easy to use and meets their needs </li>
+                    <li>user-friendly and aesthetically pleasing</li>
+                    <li>understanding of human psychology and how people interact with technology</li>
+
+                    <li>having a good understanding of the latest trends and technologies </li>
+                  </ul>
+                </strong>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div></div>
+      </div>
     </div>
 
   </div>
@@ -562,7 +563,8 @@
   <div class="containerTQ">
     <img src="../image/me.jpg" alt="right">
     <div class="centeredTQ">
-      <h3 data-aos="fade-up" class="colorAPPOINTABg">Thank You for Visiting&#33; To learn more, head over to my website&#33;</h3>
+      <h3 data-aos="fade-up" class="colorAPPOINTABg">Thank You for Visiting&#33; To learn more, head over to my
+        website&#33;</h3>
       <div class="blankHXS"></div>
 
       <h4 class="displayNonePhone  centerHorz" data-aos="fade-up">
@@ -576,31 +578,32 @@
     <div>TOP</div>
   </button>
   <!--back to top-->
-  <!--footer-->
-  <div class="colorBgGrey">
-    <div class="footer">
-      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
-      </p>
-      <div class="footer-right">
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="footer-logo" src="../icon/mail.svg" alt="email">
-        </a>
+</body>
 
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-          <img class="footer-logo" src="../icon/in.svg" alt="linkedIn">
-        </a>
+<!--footer-->
+<footer class="colorBgGrey">
+  <div class="footer">
+    <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
+    </p>
+    <div class="footer-right">
+      <a href="mailto:vickyw.design@gmail.com">
+        <img class="footer-logo" src="../icon/mail.svg" alt="email">
+      </a>
 
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="footer-logo" src="../icon/git.svg" alt="github">
-        </a>
+      <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
+        <img class="footer-logo" src="../icon/in.svg" alt="linkedIn">
+      </a>
 
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="footer-logo" src="../icon/ins.svg" alt="Instagram">
-        </a>
-      </div>
+      <a target="_blank" href="https://github.com/vicky-wyq">
+        <img class="footer-logo" src="../icon/git.svg" alt="github">
+      </a>
+
+      <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+        <img class="footer-logo" src="../icon/ins.svg" alt="Instagram">
+      </a>
     </div>
   </div>
-  <!--footer-->
-</body>
+</footer>
+<!--footer-->
 
 </html>
