--- a/appointa/index.html
+++ b/appointa/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="en">
 
 
@@ -17,8 +19,7 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property='og:title' content="Vicky Wang | UX/UI Designer | Product Designer" />
-  <meta property='og:description'
-    content='A simple way for recruiters to quickly and easily schedule interviews' />
+  <meta property='og:description' content='A simple way for recruiters to quickly and easily schedule interviews' />
   <meta property='og:url' content="https://vickywang.me/" />
   <meta property="og:site_name" content="Vicky Wang's Project">
 
@@ -28,7 +29,7 @@
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -983,7 +984,8 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The most significant hurdle is aligning the availability of both candidates and hiring managers
+                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The most significant hurdle is aligning
+                    the availability of both candidates and hiring managers
                   </p>
 
                 </div>
@@ -1580,7 +1582,9 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The goal of the lo-fi sketch is to arrange the key steps in order and pair candidates with interviewers who have both the necessary availability and relevant skill set.</p>
+                <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The goal of the lo-fi sketch is to arrange
+                  the key steps in order and pair candidates with interviewers who have both the necessary availability
+                  and relevant skill set.</p>
               </div>
             </div>
           </div>
@@ -1846,7 +1850,8 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">Continue focus on the flow and navigation. enhance wireframes with additional details..</p>
+                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">Continue focus on the flow and navigation.
+                    enhance wireframes with additional details..</p>
                 </div>
               </div>
             </div>
@@ -2334,36 +2339,36 @@
   </botton>
 
   <!--back to top-->
+</body>
 
-  <!--footer-->
-  <div class="colorBgGrey">
+<!--footer-->
+<footer class="colorBgGrey">
 
-    <div class="footer">
-      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
-      </p>
-      <div class="footer-right">
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-        </a>
+  <div class="footer">
+    <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
+    </p>
+    <div class="footer-right">
+      <a href="mailto:vickyw.design@gmail.com">
+        <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+      </a>
 
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-          <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-        </a>
+      <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
+        <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+      </a>
 
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="footer-logo" src="../../icon/git.svg" alt="github">
-        </a>
+      <a target="_blank" href="https://github.com/vicky-wyq">
+        <img class="footer-logo" src="../../icon/git.svg" alt="github">
+      </a>
 
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-        </a>
-      </div>
+      <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+        <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+      </a>
     </div>
   </div>
-  <!--footer-->
+</footer>
+<!--footer-->
 
 
-</body>
 
 
 
