--- a/design_system/index.html
+++ b/design_system/index.html
@@ -207,22 +207,23 @@
     </div>
   </div>
   <div class="blankHM"></div>
-    <!-- Title -->
-    <div class="wrapper">
-      <div class="Grid Grid--gutters Grid--center u-textCenter">
-        <div class="Grid-cell">
-          <div class="element">
-            <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
+  <!-- Title -->
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--center u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
 
 
-            <h3 class="Grid Grid--center colorBlack"> Please adjust your browser window to view the responsive layout.</h3>
+          <h3 class="Grid Grid--center colorBlack"> Please adjust your browser window to view the responsive layout.
+          </h3>
 
-            <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
-          </div>
+          <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
         </div>
       </div>
     </div>
-    <!-- Title -->
+  </div>
+  <!-- Title -->
   <div class="Grid Grid--gutters Grid--cols-3 wrapper">
 
     <div class="Grid-cell">
@@ -1254,36 +1255,36 @@
   </botton>
 
   <!--back to top-->
+</body>
 
-  <!--footer-->
-  <div class="colorBgGrey">
+<!--footer-->
+<footer class="colorBgGrey">
 
-    <div class="footer">
-      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
-      </p>
-      <div class="footer-right">
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="footer-logo" src="../icon/mail.svg" alt="email">
-        </a>
+  <div class="footer">
+    <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
+    </p>
+    <div class="footer-right">
+      <a href="mailto:vickyw.design@gmail.com">
+        <img class="footer-logo" src="../icon/mail.svg" alt="email">
+      </a>
 
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-          <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
-        </a>
+      <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
+        <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
+      </a>
 
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="footer-logo" src="../icon/git.svg" alt="github">
-        </a>
+      <a target="_blank" href="https://github.com/vicky-wyq">
+        <img class="footer-logo" src="../icon/git.svg" alt="github">
+      </a>
 
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="footer-logo" src="../icon/ins.svg" alt="medium">
-        </a>
-      </div>
+      <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+        <img class="footer-logo" src="../icon/ins.svg" alt="medium">
+      </a>
     </div>
   </div>
-  <!--footer-->
+</footer>
+<!--footer-->
 
 
-</body>
 
 
 
