--- a/seer/index.html
+++ b/seer/index.html
@@ -1789,37 +1789,37 @@
   </botton>
 
   <!--back to top-->
+</body>
 
-  <!--footer-->
-  <div class="colorBgGrey">
-    <div class="footer">
-      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
-      </p>
-      <div class="footer-right">
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="footer-logo" src="../icon/mail.svg" alt="email">
-        </a>
+<!--footer-->
+<footer class="colorBgGrey">
+  <div class="footer">
+    <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
+    </p>
+    <div class="footer-right">
+      <a href="mailto:vickyw.design@gmail.com">
+        <img class="footer-logo" src="../icon/mail.svg" alt="email">
+      </a>
 
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-          <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
-        </a>
+      <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
+        <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
+      </a>
 
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="footer-logo" src="../icon/git.svg" alt="github">
-        </a>
+      <a target="_blank" href="https://github.com/vicky-wyq">
+        <img class="footer-logo" src="../icon/git.svg" alt="github">
+      </a>
 
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="footer-logo" src="../icon/ins.svg" alt="medium">
-        </a>
-      </div>
+      <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+        <img class="footer-logo" src="../icon/ins.svg" alt="medium">
+      </a>
     </div>
   </div>
+</footer>
 
 
-  <!--footer-->
+<!--footer-->
 
 
-</body>
 
 
 
