--- a/architecture/index.html
+++ b/architecture/index.html
@@ -170,10 +170,7 @@
 
       <div class="Grid Grid--full">
         <div class="Grid-cell colorGrey">
-          <h3>projects are from my three-year M.Arch program, the main focuses were design theories, methods, and
-            practices</h3>
-          <h3>projects emphasize the major format, spatial, material, tectonic, social, technological,
-            and environmental determinants of building form</h3>
+          <h3>Throughout my three-year M.Arch program, I delved into design theories, methods, and practices, which are exemplified in the following projects. These projects placed great emphasis on the significant determinants of building form, encompassing format, spatial arrangement, materiality, tectonics, social considerations, technology, and environmental factors.</h3>
         </div>
       </div>
     </div>
