--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
       </div>
       <div class="Grid Grid--full">
         <div class="Grid-cell">
-          <h4>I am currently based out of San Francisco</h4>
-          <h4>design for business and consumer-facing websites with a small team</h4>
+          <h3>I work with a small team based in San Francisco to design business and consumer-facing websites. My strength lies in understanding complex problems and requirements and transforming them into simple and effective solutions. </h3>
         </div>
       </div>
       <div class="Grid Grid--gutters Grid--cols-3">
