--- a/about/index.html
+++ b/about/index.html
@@ -212,13 +212,13 @@
         </div>
       </div>
       <div class="Grid Grid--full">
-        <div class="Grid-cel colorGrey">
-          <h4>I’m a UI/UX designer with a background in <a href="/architecture/"
-              class="textUnderline colorGrey">architecture</a></h4>
-          <h4>broad skill set developed in a startup environment</h4>
-          <h4>with deep engagement in all stages of the design process</h4>
-          <h4>designed and <a href="https://github.com/vicky-wyq" class="textUnderline colorGrey"
-              target="_blank">implemented</a> this site from scratch, deployed it on AWS S3.</h4>
+        <div class="Grid-cel ">
+          <h3>I’m a UI/UX designer with a background in <a href="/architecture/"
+              class="textUnderline ">architecture</a></h3>
+          <h3>broad skill set developed in a startup environment</h3>
+          <h3>with deep engagement in all stages of the design process</h3>
+          <h3>designed and <a href="https://github.com/vicky-wyq" class="textUnderline "
+              target="_blank">implemented</a> this site from scratch, deployed it on AWS S3.</h3>
         </div>
       </div>
     </div>
