--- a/about/index.html
+++ b/about/index.html
@@ -212,13 +212,16 @@
         </div>
       </div>
       <div class="Grid Grid--full">
-        <div class="Grid-cel ">
-          <h3>I’m a UI/UX designer with a background in <a href="/architecture/"
-              class="textUnderline ">architecture</a></h3>
-          <h3>broad skill set developed in a startup environment</h3>
-          <h3>with deep engagement in all stages of the design process</h3>
-          <h3>designed and <a href="https://github.com/vicky-wyq" class="textUnderline "
-              target="_blank">implemented</a> this site from scratch, deployed it on AWS S3.</h3>
+        <div class="Grid-cel colorGreyTesting">
+          <h3>As a UI/UX designer with a background in <a href="/architecture/" class="textUnderline ">architecture</a>,
+            I bring a unique perspective and a broad skill set
+            to my work. I have developed my skills in a startup environment, where I have been deeply engaged in all
+            stages of the design process. From conceptualization to implementation, I have been involved in every step
+            of the process, ensuring that the end product meets the needs of the user. As an example of my work, I
+            designed and <a href="https://github.com/vicky-wyq" class="textUnderline " target="_blank">implemented</a> a
+            site from scratch, deploying it on AWS S3.</h3>
+
+
         </div>
       </div>
     </div>
