--- a/architecture/index.html
+++ b/architecture/index.html
@@ -169,7 +169,7 @@
       </div>
 
       <div class="Grid Grid--full">
-        <div class="Grid-cell colorGrey">
+        <div class="Grid-cell colorGreyTesting">
           <h3>Throughout my three-year M.Arch program, I delved into design theories, methods, and practices, which are exemplified in the following projects. These projects placed great emphasis on the significant determinants of building form, encompassing format, spatial arrangement, materiality, tectonics, social considerations, technology, and environmental factors.</h3>
         </div>
       </div>
