--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
       </div>
       <div class="Grid Grid--full">
-        <div class="Grid-cell">
+        <div class="Grid-cell colorGreyTesting">
           <h3>I work with a small team based in San Francisco to design business and consumer-facing websites. My strength lies in understanding complex problems and requirements and transforming them into simple and effective solutions. </h3>
         </div>
       </div>
