--- a/photography/index.html
+++ b/photography/index.html
@@ -176,9 +176,17 @@
         </strong>
       </div>
       <div class="Grid Grid--full">
-        <div class="Grid-cell colorGrey">
+        <div class="Grid-cell colorGreyTesting">
      
 
+          <h3>Through my unique perspective and lens, I find joy in capturing the intricate narratives and inherent
+            beauty of natural elements in my photography. Whether it's a sweeping landscape or a tiny detail, I strive
+            to recompose nature in a way that showcases its stunning aspects. I am passionate about observing the
+            intricate details of natural components and crafting their stories through my art, sharing the wonders of
+            the natural world with others.</h3>
+        </div>
+        <div class="Grid-cell colorGrey">
+  
           <h3>Through my unique perspective and lens, I find joy in capturing the intricate narratives and inherent
             beauty of natural elements in my photography. Whether it's a sweeping landscape or a tiny detail, I strive
             to recompose nature in a way that showcases its stunning aspects. I am passionate about observing the
