--- a/about/index.html
+++ b/about/index.html
@@ -212,7 +212,7 @@
         </div>
       </div>
       <div class="Grid Grid--full">
-        <div class="Grid-cel colorGreyTesting">
+        <div class="Grid-cel colorGreyDkTesting">
           <h3>As a UI/UX designer with a background in <a href="/architecture/" class="textUnderline ">architecture</a>,
             I bring a unique perspective and a broad skill set
             to my work. I have developed my skills in a startup environment, where I have been deeply engaged in all
@@ -344,7 +344,7 @@
           <div class="progressStepContainer">
             <ul class="progress">
               <li class="progress__item ">
-                <h3> <strong class="colorGrey">Art </strong> </h3>
+                <h3> <strong class="colorGreyDk">Art </strong> </h3>
 
                 <ul>
                   <li> developed the nature of artistic experience, allows me to express our emotions
@@ -361,7 +361,7 @@
               <div class="blankHXS"></div>
 
               <li class="progress__item">
-                <h3> <strong class="colorGrey">Design </strong> </h3>
+                <h3> <strong class="colorGreyDk">Design </strong> </h3>
 
                 <ul>
                   <li>having a strong creative vision</li>
@@ -372,7 +372,7 @@
               <div class="blankHXS"></div>
 
               <li class="progress__item">
-                <h3> <strong class="colorGrey">Architecture </strong> </h3>
+                <h3> <strong class="colorGreyDk">Architecture </strong> </h3>
 
                 <ul>
 
