--- a/design_system/index.html
+++ b/design_system/index.html
@@ -320,7 +320,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLess displayNone">HEX 161616</div>
+          <div class="blockS blackLessBG displayNone">HEX 161616</div>
         </div>
       </div>
     </div>
@@ -335,7 +335,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLess displayNone">HEX 161616</div>
+          <div class="blockS blackLessBG displayNone">HEX 161616</div>
         </div>
       </div>
     </div>
@@ -350,12 +350,12 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLess displayNone">HEX 161616</div>
+          <div class="blockS blackLessBG displayNone">HEX 161616</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLess displayNone">HEX 161616</div>
+          <div class="blockS blackLessBG displayNone">HEX 161616</div>
         </div>
       </div>
     </div>
@@ -370,7 +370,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLess displayNone">HEX 161616</div>
+          <div class="blockS blackLessBG displayNone">HEX 161616</div>
         </div>
       </div>
     </div>
@@ -738,40 +738,45 @@
     </div>
     <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
     </div>
-    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
+    <div class="Grid Grid--gutters Grid--cols-12 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS black shadowBox">HEX 161616</div>
+          <div class="blockS blackBG colorGreyLt shadowBox">HEX 202020</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLess shadowBox">HEX 5f6368</div>
+          <div class="blockS blackLessBG colorGreyLt shadowBox">HEX 5f6368</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyDarkest shadowBox">HEX 999D9F</div>
+          <div class="blockS colorGreyBGTesting colorGreyLt shadowBox">HEX 83878a</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyDark shadowBox">HEX c8c8c8</div>
+          <div class="blockS colorGreyDarkBGestBG colorGreyLt shadowBox">HEX 999D9F</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyNormal shadowBox">HEX e4e4e4</div>
+          <div class="blockS colorGreyDarkBG colorGreyLt shadowBox">HEX c8c8c8</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyLight shadowBox">HEX efefef</div>
+          <div class="blockS colorGreyNormalBG shadowBox">HEX e4e4e4</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyLightest shadowBox">HEX f8f8f8</div>
+          <div class="blockS colorGreyLightBG shadowBox">HEX efefef</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorGreyLightBGest shadowBox">HEX f8f8f8</div>
         </div>
       </div>
     </div>
@@ -808,12 +813,12 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLess displayNone"></div>
+          <div class="blockS blackLessBG displayNone"></div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLess displayNone"></div>
+          <div class="blockS blackLessBG displayNone"></div>
         </div>
       </div>
     </div>
@@ -831,17 +836,17 @@
     <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyLightest shadowFilter">Small Shadow</div>
+          <div class="blockS colorGreyLightBGest shadowFilter">Small Shadow</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyLightest shadowBox">Normal Shadow</div>
+          <div class="blockS colorGreyLightBGest shadowBox">Normal Shadow</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyLightest shadowFilterL">Larger Shadow</div>
+          <div class="blockS colorGreyLightBGest shadowFilterL">Larger Shadow</div>
         </div>
       </div>
     </div>
