--- a/gardeners_hub/index.html
+++ b/gardeners_hub/index.html
@@ -166,7 +166,7 @@
 
 
   <div class="wrapper rowChng">
-    <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon svg float">
+    <div class="column centerVer colorGreyDkShadow border-radius heightL widthS marginIcon svg float">
       <img class="widthLogo paddingS" src="icon_concepts1.svg" alt="User Research">
       <P class="lineHorizSmallAMGH colorGHbg1"> </P>
       <P class="titleM"> Share &amp; Sell </P>
@@ -176,7 +176,7 @@
       <P class="textS"> &#183; Light Condition</P>
       <P class="textS"> &#183; Indoor and Outdoor</P>
     </div>
-    <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
+    <div class="column centerVer colorGreyDkShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts2.svg" alt="User Research">
       <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Social Network </P>
@@ -186,7 +186,7 @@
       <P class="textS"> &#183; Gardening Tools</P>
       <P class="textS"> &#183; Decoration Ideas</P>
     </div>
-    <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
+    <div class="column centerVer colorGreyDkShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts3.svg" alt="User Research">
       <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Plant Profile </P>
@@ -197,7 +197,7 @@
       <P class="textS"> &#183; Light and Soil</P>
       <P class="textS"> &#183; Ventilation</P>
     </div>
-    <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
+    <div class="column centerVer colorGreyDkShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts4.svg" alt="User Research">
       <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Plant Care </P>
@@ -344,7 +344,7 @@
   <div class="rowChng centerHorz align-top wrapper centerPhone">
 
     <div class="column centerVer">
-      <h4 class="centerVer centerHorz colorGreyShadow circleGH ">Empathize </h4>
+      <h4 class="centerVer centerHorz colorGreyDkShadow circleGH ">Empathize </h4>
       <div class="blankHS"></div>
       <h5> &#183; User Research</h5>
       <h5> &#183; Competitive Analysis </h5>
@@ -353,7 +353,7 @@
     <P class="researchArr"></P>
 
     <div class="column centerVer">
-      <h4 class="centerVer centerHorz colorGreyShadow circleGH  ">Define </h4>
+      <h4 class="centerVer centerHorz colorGreyDkShadow circleGH  ">Define </h4>
       <div class="blankHS"></div>
 
       <h5> &#183; Contextual Inquiries </h5>
@@ -362,7 +362,7 @@
     <P class="researchArr"></P>
 
     <div class="column centerVer">
-      <h4 class="centerVer centerHorz colorGreyShadow circleGH  ">Ideate </h4>
+      <h4 class="centerVer centerHorz colorGreyDkShadow circleGH  ">Ideate </h4>
       <div class="blankHS"></div>
       <h5> &#183; Information Architecture</h5>
       <h5> &#183; User Flow </h5>
@@ -370,7 +370,7 @@
     </div>
     <P class="researchArr"></P>
     <div class="column centerVer">
-      <h4 class="centerVer centerHorz colorGreyShadow circleGH  ">Prototype
+      <h4 class="centerVer centerHorz colorGreyDkShadow circleGH  ">Prototype
       </h4>
       <div class="blankHS"></div>
 
@@ -380,7 +380,7 @@
     <P class="researchArr"></P>
 
     <div class="column centerVer">
-      <h4 class="centerVer centerHorz colorGreyShadow circleGH  ">Final Design </h4>
+      <h4 class="centerVer centerHorz colorGreyDkShadow circleGH  ">Final Design </h4>
       <div class="blankHS"></div>
 
       <h5> &#183; On-boarding</h5>
@@ -1117,7 +1117,7 @@
 
     <div class="wrapper  rowChng centerHorz">
 
-      <div class="column centerVer colorGreyShadow border-radius heightM widthS marginIcon float ">
+      <div class="column centerVer colorGreyDkShadow border-radius heightM widthS marginIcon float ">
         <img class="widthLogo paddingS" src="icon_ci_1.svg" alt="User Research">
         <P class="lineHorizSmallAMGH"> </P>
         <P class="titleM"> Method </P>
@@ -1128,7 +1128,7 @@
         <P class="textS"> &#183; did all information work? </P>
       </div>
 
-      <div class="column centerVer colorGreyShadow border-radius heightM widthS marginIcon float ">
+      <div class="column centerVer colorGreyDkShadow border-radius heightM widthS marginIcon float ">
         <img class="widthLogo paddingS" src="icon_ci_2.svg" alt="User Research">
         <P class="lineHorizSmallAMGH"> </P>
         <P class="titleM"> Pain Points </P>
@@ -1138,7 +1138,7 @@
         <P class="textS"> &#183; dedicate time to gardening?</P>
 
       </div>
-      <div class="column centerVer colorGreyShadow border-radius heightM widthS marginIcon float">
+      <div class="column centerVer colorGreyDkShadow border-radius heightM widthS marginIcon float">
         <img class="widthLogo paddingS" src="icon_ci_3.svg" alt="User Research">
         <P class="lineHorizSmallAMGH"> </P>
         <P class="titleM"> Wishlist </P>
@@ -2620,7 +2620,7 @@
 
 
   <div class="wrapper rowChng ">
-    <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
+    <div class="column centerVer colorGreyDkShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts1.svg" alt="User Research">
       <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Share &amp; Sell </P>
@@ -2630,7 +2630,7 @@
       <P class="textS"> &#183; Light Condition</P>
       <P class="textS"> &#183; Indoor and Outdoor</P>
     </div>
-    <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
+    <div class="column centerVer colorGreyDkShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts2.svg" alt="User Research">
       <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Social Network </P>
@@ -2640,7 +2640,7 @@
       <P class="textS"> &#183; Gardening Tools</P>
       <P class="textS"> &#183; Decoration Ideas</P>
     </div>
-    <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
+    <div class="column centerVer colorGreyDkShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts3.svg" alt="User Research">
       <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Plant Profile </P>
@@ -2651,7 +2651,7 @@
       <P class="textS"> &#183; Light and Soil</P>
       <P class="textS"> &#183; Ventilation</P>
     </div>
-    <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
+    <div class="column centerVer colorGreyDkShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts4.svg" alt="User Research">
       <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Plant Care </P>
