--- a/meal_planner/index.html
+++ b/meal_planner/index.html
@@ -1731,11 +1731,11 @@
         <div class="colorMPBorder widthXS padding-tb centerHorz titleS ">TRENDING</div>
         <div class="blankHXS"></div>
 
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Healthy Food</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Healthy Food</div>
         <div class="blankHXS"></div>
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Food Benefit </div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Food Benefit </div>
         <div class="blankHXS"></div>
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Good for Dinner</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Good for Dinner</div>
       </div>
       <div class="blankVer"></div>
 
@@ -1743,9 +1743,9 @@
         <div class="colorMPBorder widthXS padding-tb centerHorz titleS ">RECIPE</div>
         <div class="blankHXS"></div>
 
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Recommendations</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Recommendations</div>
         <div class="blankHXS"></div>
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Shop Ingredients</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Shop Ingredients</div>
         <div class="blankHXS"></div>
       </div>
       <div class="blankVer"></div>
@@ -1754,11 +1754,11 @@
         <div class="colorMPBorder widthXS padding-tb centerHorz titleS">SHOPPING LIST</div>
         <div class="blankHXS"></div>
 
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Protein</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Protein</div>
         <div class="blankHXS"></div>
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Vegetables</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Vegetables</div>
         <div class="blankHXS"></div>
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Fruit</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Fruit</div>
       </div>
       <div class="blankVer"></div>
 
@@ -1766,11 +1766,11 @@
         <div class="colorMPBorder widthXS padding-tb centerHorz titleS">INVENTORY</div>
         <div class="blankHXS"></div>
 
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Fridge</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Fridge</div>
         <div class="blankHXS"></div>
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Pantry</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Pantry</div>
         <div class="blankHXS"></div>
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Garden</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Garden</div>
       </div>
       <div class="blankVer"></div>
 
@@ -1778,11 +1778,11 @@
         <div class="colorMPBorder widthXS padding-tb centerHorz titleS">EQUIPEMNT</div>
         <div class="blankHXS"></div>
 
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Cookware</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Cookware</div>
         <div class="blankHXS"></div>
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Bakeware</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Bakeware</div>
         <div class="blankHXS"></div>
-        <div class="colorGreyBorder widthXS padding-tb centerHorz textS">Utensils</div>
+        <div class="colorGreyDkBorder widthXS padding-tb centerHorz textS">Utensils</div>
       </div>
 
     </div>
