--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
         <div class="element">
           <a href="/appointa/">
             <div class="">
-              <div class="elementCard float cardBorder APPOINTA">
+              <div class="elementCard float cardBorder APPOINTA ">
                 <img src="./image/Cover_APPOINTA.jpg" alt="APPOINTA">
                 <div class="element">
                   <div class="element">
-                    <h5>For job interview scheduling</h5>
-                    <h3 class="arrCard colorBlack">APPOINTA</h3>
-                    <h4>Streamline the job interview scheduling process to make it more efficient,
-                      convenient, and intuitive</h4>
+                    <h4>For job interview scheduling</h4>
+                    <h2 class="arrCard">APPOINTA</h2>
+                    <h3>Streamline the job interview scheduling process to make it more efficient,
+                      convenient, and intuitive</h3>
                   </div>
                 </div>
               </div>
@@ -232,15 +232,15 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/seer/">
-            <div class="elementCard float cardBorder SEER">
+            <div class="elementCard float cardBorder SEER shadowBox2">
               <img src="./image/Cover_SEER.jpg" alt="SEER">
               <div class="element">
                 <div class="element">
-                  <h5>For tracking business performance</h5>
-                  <h3 class="arrCard colorBlack">SEER</h3>
+                  <h4>For tracking business performance</h4>
+                  <h2 class="arrCard ">SEER</h2>
                   <!--Analysis Report-->
-                  <h4>Help the brand managers understand their potential users and promote their
-                    brand on Reddit</h4>
+                  <h3>Help the brand managers understand their potential users and promote their
+                    brand on Reddit</h3>
                 </div>
               </div>
             </div>
@@ -251,10 +251,9 @@
 
 
     <div class="Grid Grid--gutters Grid--cols-2">
-
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementCard float cardBorder">
+          <div class="elementCard float cardBorder shadowBox2">
             <div class="img__wrap">
               <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
               <div class="img__description">
@@ -270,10 +269,10 @@
             </div>
             <div class="element">
               <div class="element">
-                <h5>Password is required </h5>
-                <h3 class="arrCard colorBlack">Work Samples</h3>
-                <h4>broad skill set developed in a startup environment
-                  with deep engagement in all stages of the design process</h4>
+                <h4>Password is required </h4>
+                <h2 class="arrCard colorBlack">Work Samples</h2>
+                <h3>broad skill set developed in a startup environment
+                  with deep engagement in all stages of the design process</h3>
               </div>
             </div>
           </div>
@@ -284,14 +283,14 @@
           <a href="/design_system/">
             <div class="">
 
-              <div class="elementCard float cardBorder">
+              <div class="elementCard float cardBorder shadowBox2">
                 <img src="./image/Cover_portfolioWeb.png" alt="vickywang.me">
                 <div class="element">
                   <div class="element">
-                    <h5>For website vickywang.me </h5>
-                    <h3 class="arrCard colorBlack">Design System</h3>
-                    <h4>Creating a design system to establish consistent branding and styling across the entire website
-                    </h4>
+                    <h4>For website vickywang.me </h4>
+                    <h2 class="arrCard colorBlack">Design System</h2>
+                    <h3>Creating a design system to establish consistent branding and styling across the entire website
+                    </h3>
                   </div>
                 </div>
               </div>
@@ -319,7 +318,7 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/gardeners_hub/">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBox2">
               <img src="./image/layout_GardenersHub.png" alt="Gardeners Hub">
               <div class="element">
                 <div class="element">
@@ -337,7 +336,7 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/appointment_maker/">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBox2">
               <img src="./image/layout_AppointmentMaker.png" alt="Make appointment">
               <div class="element">
                 <div class="element">
@@ -354,7 +353,7 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/meal_planner/">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBox2">
               <img src="./image/layout_MealPlanner.png" alt="Meal Planner">
               <div class="element">
                 <div class="element">
